force-app/main/default/objects/Course_Outcome_Program_Outcome__c/Course_Outcome_Program_Outcome__c.object-meta.xml
<CustomObject>
    <label>Course Outcome Program Outcome</label>
    <nameField>
        <displayFormat>CPM-{0000}</displayFormat>
        <label>Course Outcome Program Outcome Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Outcome Program Outcomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>