force-app/main/default/objects/Course_Outcome_Program_Outcome__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Course Outcomes - Program Outcomes</relationshipLabel>
    <relationshipName>Course_Outcomes_Program_Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>