force-app/main/default/objects/Course_Outcome_Program_Outcome__c/fields/Course_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Course_Outcome__c</fullName>
    <label>Course Outcome</label>
    <referenceTo>Course_Outcome__c</referenceTo>
    <relationshipLabel>Course Outcome Program Outcomes</relationshipLabel>
    <relationshipName>Course_Outcome_Program_Outcomes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>