force-app/main/default/objects/Course_Outcome_Program_Outcome__c/fields/Program_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Program_Outcome__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Outcome</label>
    <referenceTo>Program_Outcome__c</referenceTo>
    <relationshipLabel>Course Outcomes - Program Outcomes</relationshipLabel>
    <relationshipName>Course_Outcomes_Program_Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>