force-app/main/default/objects/Course_Outcome_Program_Outcome__c/fields/Program_Version__c.field-meta.xml
<CustomField>
    <fullName>Program_Version__c</fullName>
    <formula>Program_Outcome__r.Study_Program_Version__r.Version_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Version</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>