force-app/main/default/objects/Course_Outcome_Program_Outcome__c/fields/Study_Unit_Version__c.field-meta.xml
<CustomField>
    <fullName>Study_Unit_Version__c</fullName>
    <formula>Course_Outcome__r.Study_Unit_Version__r.Version_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Study Unit Version</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>